Fixed spacing issues + other stuff

--- a/style.css
+++ b/style.css
@@ -29,6 +29,28 @@ body {
   box-shadow: 1px 1px 1px 1px rgba(255, 255, 255, 0.411);
   margin-top: 20px;
 }
+#firefox {
+  position: absolute;
+  width: 80%;
+  height: 95%;
+  background-color: rgba(128, 128, 128, 0.534);
+  z-index: 1;
+  margin: 2% 0 0 10%;
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
+  visibility: hidden;
+}
+#firefox h1 {
+  margin-top: 10%;
+}
+#firefox button:nth-child(1) {
+  position: absolute;
+  left: 70vw;
+  background-color: red;
+  border: 2px 2px 2px 2px white;
+  box-shadow: 1px 1px 1px 1px rgba(255, 255, 255, 0.411);
+  margin-top: 20px;
+}
 #sidebar {
   position: absolute;
   background-color: rgba(0, 80, 146, 0.164); /*changed color to make side bar more distinct*/
@@ -224,6 +246,8 @@ body {
 .description {
   margin-left: 1vw;
   font-size: 2ch;
+  text-align: left;
+  width: 10px;
 }
 /* Not working */
 /* .pane pre:nth-child(3) {
